--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.160.0",
+    "antd": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "three": "^0.160.0"
   },
   "devDependencies": {
