--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api-codegen": "npx orval",
+    "api-mock": "npx mockoon-cli start --data openapi.mock.json"
   },
   "dependencies": {
     "@pixiv/three-vrm": "^2.1.0",
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
+    "@tanstack/react-query": "^5.24.7",
     "@types/three": "^0.160.0",
     "antd": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
+    "axios": "^1.6.7",
     "three": "^0.160.0"
   },
   "devDependencies": {
+    "@mockoon/cli": "^7.0.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
@@ -34,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "npm-run-all": "^4.1.5",
+    "orval": "^6.25.0",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
