--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@tanstack/react-query": "^5.24.7",
     "@types/three": "^0.160.0",
     "antd": "^5.15.0",
+    "axios": "^1.6.7",
+    "hls.js": "^1.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
-    "axios": "^1.6.7",
     "three": "^0.160.0"
   },
   "devDependencies": {
