--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "api-mock": "npx mockoon-cli start --data openapi.mock.json"
   },
   "dependencies": {
+    "@livekit/components-core": "^0.9.1",
+    "@livekit/components-react": "^2.0.3",
     "@pixiv/three-vrm": "^2.1.0",
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
@@ -19,18 +21,22 @@
     "@types/three": "^0.160.0",
     "antd": "^5.15.0",
     "axios": "^1.6.7",
+    "base62-ts": "^1.3.11",
     "hls.js": "^1.5.7",
+    "livekit-client": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@mockoon/cli": "^7.0.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
