--- a/livekit-server/package.json
+++ b/livekit-server/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "your-project-name",
-    "version": "1.0.0",
-    "type": "module",
-    "scripts": {
-        "start": "node accessTokenServer.js"
-    },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.18.3",
-        "livekit-server-sdk": "^2.1.1"
-    }
+  "name": "access-token-server",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node accessTokenServer.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "livekit-server-sdk": "^2.1.1"
+  }
 }
