--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
+    "react-joystick-component": "^6.2.1",
     "three": "^0.160.0",
     "uuid": "^9.0.1"
   },
