--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^5.0.1",
     "react-joystick-component": "^6.2.1",
     "three": "^0.160.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vconsole": "^3.15.1"
   },
   "devDependencies": {
     "@mockoon/cli": "^7.0.0",
